Hexadecimal converter (back)

--- a/Proyecto UI/package.json
+++ b/Proyecto UI/package.json
@@ -24,6 +24,8 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^22.5.0",
